# Byteiq

./: -.docx  .byteiq_context.json  .gitignore  AUTO_RECOVERY_SYSTEM.md  BUG_FIXES_SUMMARY.md  BYTEIQ.md  CLAUDE.md  COMMAND_FAILURE_HANDLING_FIX.md  COMMAND_SUGGESTIONS_DEMO.md  COMMIT_SUMMARY_v1.2.6.md  DELETE_FILE_TOOL_IMPLEMENTATION.md  DISTRIBUTION_GUIDE.md  ERROR_HANDLING_FIX.md  ERROR_HANDLING_IMPROVEMENT.md  FORGEAI_PY_FIX.md  HACPP_GUIDE.md  LICENSE  MANIFEST.in  MCP_完整指南.md  PROMPT_STRENGTH_GUIDE.md  PYPI_UPLOAD_SUCCESS.md  RAW_OUTPUT_GUIDE.md  README.md  README_COMMAND_SUGGESTIONS.md  RELEASE_NOTES_v1.1.0.md  SMART_FAILURE_DETECTION.md  TIMEOUT_FIX_DOCUMENTATION.md  TOOL_LIMITS_IMPLEMENTATION.md  VERSION.md  VISUAL_DIFF_IMPROVEMENT.md  augment.md  auto_stop_mcp_servers.py  build_package.py  byteiq.bat  byteiq.py  calculator.py  check_port.py  check_remaining_emojis.py  claude code.txt  debug_init.py  (+51 more)
.claude/: settings.local.json
contexts/: 1_1756281945.json
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  github_description.md  installation.md
forge_ai_code_latest/: README.md  setup.py
forge_ai_code_latest/forge_ai_code/: __init__.py  ai_client.py  ai_tools.py  command_processor.py  config.py  input_handler.py  keyboard_handler.py  main.py  output_monitor.py  thinking_animation.py  todo_manager.py  todo_renderer.py  ui.py
forge_ai_code_pip/: forge_ai_code-1.2.5-py3-none-any.whl
src/: __init__.py  agent_enhancer.py  ai_client.py  ai_tools.py  auto_todo.py  byteiq_config.py  chat_manager.py  command_processor.py  commands.py  compression.py  config.py  context_manager.py  debug_config.py  debug_session.py  file_utils.py  guide_ai.py  hacpp_client.py  input_handler.py  lazy_loader.py  mcp_client.py  mcp_config.py  modes.py  performance_monitor.py  performance_optimizer.py  project_analyzer.py  project_doc_analyzer.py  project_memory.py  prompt_templates.py  snake_game.py  theme.py  thinking_animation.py  todo_renderer.py  token_animator.py  ui.py
static/css/: style.css
static/js/: app.js
templates/: index.html
