[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "byteiq"
version = "1.3.2"
description = "智能AI编程助手 - 支持多种AI模型的自适应提示词系统，新增删除文件工具和工具调用限制"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ByteIQ Team", email = "support@byteiq.dev"}
]
maintainers = [
    {name = "ByteIQ Team", email = "support@byteiq.dev"}
]
keywords = [
    "ai", "artificial-intelligence", "coding", "programming",
    "assistant", "automation", "development", "cli", "tool",
    "prompt-engineering", "multi-model", "adaptive"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
requires-python = ">=3.8"
dependencies = [
    "colorama>=0.4.4",
    "requests>=2.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.910",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
]

[project.urls]
Homepage = "https://byteiq.dev/"
Documentation = "https://byteiq.readthedocs.io/"
Repository = "https://github.com/byteiq/byteiq"
"Bug Reports" = "https://github.com/byteiq/byteiq/issues"
Changelog = "https://github.com/byteiq/byteiq/blob/main/VERSION.md"

[project.scripts]
byteiq = "byteiq:main"
ByteIQ = "byteiq:main"

[tool.setuptools]
packages = ["src"]
include-package-data = true
py-modules = ["byteiq"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
